--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
 </head>
 <body>
-        <div id="timer" style="position: fixed; top: 10px; left: 50%; transform: translateX(-50%); font-size: 24px; color: #ff0000; z-index: 2000;">
+        <div id="timer" style="position: fixed; top: 10px; left: 50%; transform: translateX(-50%); font-size: 76px; color: #ff0000; z-index: 2000;">
             ????: <span id="countdown"></span>
         </div>
     <div id="warning">
@@ -249,7 +249,7 @@ console.error('Ошибка загрузки аудио:', e);
     }
 
     const countdownTimer = setInterval(updateCountdown, 1000);
-    updateCountdown(); // Вызовите функцию сразу, чтобы избежать задержки в отображении
+    updateCountdown();
 </script>
 </body>
 </body>
