--- a/index.html
+++ b/index.html
@@ -101,6 +101,15 @@
         <div id="text-overlay2" class="text-overlay"></div>
     </div>
 
+    <div id="social-buttons" style="position: fixed; bottom: 20px; right: 20px; z-index: 2000;">
+        <a href="https://vk.com/devvorsky" target="_blank" style="display: inline-block; margin-right: 10px;">
+            <img src="vk.png" alt="VK" style="width: 40px; height: 40px;">
+        </a>
+        <a href="https://t.me/Devorskiy" target="_blank">
+            <img src="tg.png" alt="Telegram" style="width: 40px; height: 40px;">
+        </a>
+    </div>
+
     <audio id="background-audio" loop>
         <source src="audio.mp3" type="audio/mpeg">
     </audio>
