--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
         <a href="https://t.me/Devorskiy" target="_blank">
             <img src="tg.png" alt="Telegram" style="width: 40px; height: 40px;">
         </a>
+        <a href="https://github.com/KiryaScript" target="_blank">
+            <img src="git.png" alt="GitHub" style="width: 40px; height: 40px;">
+    </a>
     </div>
 
     <audio id="background-audio" loop>
